_sass/layout.scss
@import "variables";

// Grid
////////////////////////////////////////////////////////////////////////////////

.col--4 {
  @include break-at('small') {
    width: col(6);
  }
}

.col--8 {
  @include break-at('small') {
    width: col(12);
    margin-right: 0;
  }
}

.hero__caption {
  @include break-at('small') {
    width: col(12);
    margin-right: 0;
    margin-bottom: $gutter;
  }
}

// Canvas
////////////////////////////////////////////////////////////////////////////////
#popcorn__canvas {
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 0;
}

// Z-index
////////////////////////////////////////////////////////////////////////////////
footer, p, img, .section__song, .button, .header__logo, .header__title {
  z-index: 500;
  position: relative;
}

h1 {
  z-index: -1;
  position: relative;
}

// Wrappers
////////////////////////////////////////////////////////////////////////////////
.wrapper {
  width: 75%;
  max-width: 1440px;
  margin: 0 auto;
  display: block;
  @include break-at('medium') {
    width: 85%;
  }
  @include break-at('small') {
    width: 90%;
  }
  // Clearfix
  zoom: 1;
  &:after {
    content:" ";
    display: block;
    clear: both;
  }
}

.wrapper--outer {
  width: 100%;
  background-color: $black;
  // Clearfix
  zoom: 1;
  &:after {
    content:" ";
    display: block;
    clear: both;
  }
}

.wrapper--video{
  overflow: hidden;
  padding-bottom: 56.25%;
  position: relative;
  height: 0;
  margin-bottom: $gutter;
  iframe{
    left: 0;
    top: 0;
    height: 100%;
    width: 100%;
    position: absolute;
  }
  @include break-at('small') {
    margin-bottom: $gutter-half;
  }
}

// Sections
////////////////////////////////////////////////////////////////////////////////

section {
  margin-bottom: $gutter-6;
  &.hero {
    margin-bottom: $gutter-4;
  }
  @include break-at('medium') {
    margin-bottom: $gutter-4;
  }
}

.section__song {
  margin-bottom: $gutter;
  padding: $gutter-half;
  background-color: $black;
  iframe {
    width: 100%;
  }
}

.section__images {
  margin-right: 0;
  float: right;
}

.section__caption {
  strong {
    font-weight: 700;
  }
  @include break-at('medium') {
    width: col(8);
  }
  @include break-at('small') {
    width: col(6);
  }
}

// Popup
////////////////////////////////////////////////////////////////////////////////

.popup {
  position: fixed;
  width: 100%;
  height: 100%;
  z-index: 999;
  display: none;
}

.popup__overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: $black;
  opacity: .25;
}

.popup__card {
  position: absolute;
  padding: $gutter $gutter 0 $gutter;
  background-color: $white;
  width: 50%;
  margin-left: 25%;
  margin-top: $gutter-4;
  border-radius: 10px;
  .button {
    display: block;
  }
  .popup__coupon--code {
    margin: $gutter 0;
    font-size: 75px;
    letter-spacing: 2px;
    color: $white;
    -webkit-text-stroke-width: 2px;
    -webkit-text-stroke-color: $black;
  }
  @include break-at('large') {
    width: 60%;
    margin-left: 20%;
  }
  @include break-at('medium') {
    width: 70%;
    margin-left: 15%;
    .popup__coupon--code {
      font-size: 60px;
    }
  }
  @include break-at('small') {
    width: 90%;
    margin-left: 5%;
    .popup__coupon--code {
      font-size: 35px;
    }
  }
}

// Header
////////////////////////////////////////////////////////////////////////////////

header {
  margin-bottom: $gutter;
  @include break-at('small') {
    margin-bottom: $gutter-2;
  }
}

.header__title {
  margin-top: $gutter;
  @include break-at('large') {
    h2 {
      font-size: 15px;
      line-height: 12px
    }
  }
  @include break-at('medium') {
    width: col(4);
    margin-right: 0;
    h2 {
      font-size: 18px;
      line-height: 15px;
    }
  }
  @include break-at('small') {
    width: col(6);
  }
}

.header__logo {
  @include break-at('medium') {
    width: col(4);
  }
  @include break-at('small') {
    width: col(6);
  }
}

.header__links {
  margin: $gutter 0 0 0;
  @include break-at('medium') {
    width: col(4);
    margin-right: 0;
  }
  @include break-at('small') {
    width: 100%;
  }
}

.header__link {
  height: $gutter + $gutter-half;
  line-height: 40px;
  font-size: 12px;
  @include break-at('large') {
    width: col(6);
    &:nth-child(even) {
      margin-right: 0;
    }
    &:nth-child(3) {
      margin-top: $gutter-half;
    }
    &:nth-child(4) {
      margin-top: $gutter-half;
    }
  }
  @include break-at('medium') {
    width: 100%;
    margin: $gutter-half 0 0 0;
    &:first-child {
      margin-top: 0;
    }
  }
  @include break-at('small') {
    width: col(6);
    margin-top: 0;
    &:nth-child(odd) {
      margin-right: $gutter;
    }
    &:nth-child(3) {
      margin-top: $gutter-half;
    }
    &:nth-child(4) {
      margin-top: $gutter-half;
    }
  }
}

// Links
////////////////////////////////////////////////////////////////////////////////

.button {
  background-color: inherit;
  border-radius: 500px;
  text-align: center;
  border: 2px solid $black;
  color: $black;
  font-weight: 500;
  &:hover {
    color: $white;
    background-color: $black;
    cursor: pointer;
  }
}

.remix {
  background-color: $black;
  color: $blue;
  text-transform: uppercase;
  font-weight: 700;
  &:hover {
    background-color: inherit;
    color: $black !important;
  }
}

.links__link {
  margin-bottom: $gutter;
  height: $gutter-2;
  line-height: 55px;
  font-size: 18px;
  @include break-at('medium') {
    font-size: 15px;
    margin-bottom: $gutter;
  }
  @include break-at('small') {
    font-size: 18px;
    width: 100%;
    margin: 0 0 $gutter-half 0;
    &:nth-child(4) {
      margin-bottom: $gutter-2;
    }
  }
}

// Footer
////////////////////////////////////////////////////////////////////////////////
footer {
  padding: $gutter-2 0 $gutter-6 0;
  z-index: 900;
  @include break-at('small') {
    .col--4 {
      margin-bottom: $gutter;
    }
  }
}

.footer__social {
  color: $blue;
  display: inline-flex;
  margin-bottom: $gutter-2 !important;
  div {
    flex: auto;
    display: inline;
    text-align: center;
    i {
      font-size: 36px;
      @include break-at('medium') {
        font-size: 25px;
      }
    }
  }
}

#footer__caption {
  color: $blue;
  @include break-at('small') {
    display: none;
  }
}

.footer__logo {
  fill: $blue;
}

